--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ As an AI researcher, I am passionate about leveraging Machine Learning and Deep 
     <div class="project">
         <h3>🔹 Deep Learning Model Optimization</h3>
         <p>This project focuses on optimizing deep learning models for image classification tasks. It compares a fully connected neural network (FCNN) with a convolutional neural network (CNN) to evaluate the impact of model architecture and learning rate optimization. The CNN model, utilizing convolution and pooling layers, outperformed the FCNN in terms of accuracy, and the learning rate tuning significantly improved both models' convergence speed and performance. The results are visualized through accuracy and loss plots for a clearer comparison of the optimization effects.</p>
-        <a href="Deep_Learning_Model_Optimization.pdf" class="btn" target="_blank">View Project</a>
+        <a href="https://github.com/HarshRathiii/my-project/blob/main/Assignment3_UMLT_a1882311.ipynb" class="btn" target="_blank">View Project</a>
     </div>
     
 </section>
