--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 As an AI researcher, I am passionate about leveraging Machine Learning and Deep Learning to tackle real-world problems, and this project is a perfect example of how AI can transform the healthcare industry. By improving diagnostic capabilities, we’re aiming to make a significant impact on early detection and treatment.
     </p>
-    <a href="research proposal - Copy.pdf" class="btn" download>Download Research Proposal</a>
+    <a href="literature review 1.pdf" class="btn" download>Download Research Proposal</a>
 </section>
 
 <!-- Projects Section -->
