--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Harsh Sanjay Rathi</h1>
             <p>AI Researcher | Machine Learning | Deep Learning | Computer Vision</p>
             <p>📌 <strong>Researcher at University of Adelaide</strong> - Working on **OA Detection using Computer Vision**</p>
-            <a href="Entry-level resume.pdf" class="btn" download>Download Resume</a>
+            <a href="Entry-level resume (1).pdf" class="btn" download>Download Resume</a>
         </div>
     </header>
 
