--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ As an AI researcher, I am passionate about leveraging Machine Learning and Deep 
     <div class="project">
         <h3>🔹 Stock Price Prediction Using LSTM</h3>
         <p>This project focuses on developing a time-series prediction model for NIFTY50 stock prices using Recurrent Neural Networks (RNN) and Long Short-Term Memory (LSTM). While RNN suffered from the vanishing gradient problem, LSTM performed significantly better by retaining long-term dependencies in the data. The model achieved an R² score of 0.89 with optimized hyperparameters, showcasing its accuracy in predicting stock prices.</p>
-        <a href="https://github.com/HarshRathiii/my-project/blob/main/Stock%20Price%20Prediction.ipynb" target="_blank">View Project</a>
+        <a href="https://github.com/HarshRathiii/Portfolio/blob/main/stock%20price%20prediction.pdf" target="_blank">View Project</a>
     </div>
     
     <div class="project">
