--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ As an AI researcher, I am passionate about leveraging Machine Learning and Deep 
     <div class="project">
         <h3>🔹 Recommendation System</h3>
         <p>This project involves developing a personalized recommendation system using collaborative filtering techniques. The system analyzes user behavior and recommends items based on similar users using cosine similarity. It also uses item-item similarity matrix with Pearson correlation to recommend similar items. Additionally, Singular Value Decomposition (SVD) is applied for dimensionality reduction, improving the system's efficiency. The system's performance was evaluated using precision, recall, and F1-score for accuracy.</p>
-        <a href="https://github.com/HarshRathiii/my-project/blob/main/recommendation.ipynb" target="_blank">View Project</a>
+        <a href="https://github.com/HarshRathiii/Portfolio/blob/main/Recommendation%20system.pdf" target="_blank">View Project</a>
     </div>
     
     <div class="project">
