--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Harsh Sanjay Rathi</h1>
             <p>AI Researcher | Machine Learning | Deep Learning | Computer Vision</p>
             <p>📌 <strong>Researcher at University of Adelaide</strong> - Working on **OA Detection using Computer Vision**</p>
-            <a href="https://github.com/HarshRathiii/Portfolio/blob/main/Entry-level%20resume%20(1).pdf" class="btn" target="_blank">View Resume</a>
+            <a href="https://github.com/HarshRathiii/Portfolio/blob/main/Entry-level%20resume%20(1)-harsh.pdf" class="btn" target="_blank">View Resume</a>
         </div>
     </header>
 
