--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <section id="about" class="section-black">
     <h2>About Me</h2>
     <p>
-        I am a passionate AI researcher working on **Osteoarthritis (OA) Detection** using **Vision Transformers (ViTs)**.  
-        My background includes a **Bachelor's in Instrumentation Engineering**, specializing in **Sensors & IoT**, and a **Diploma in Mechanical Engineering**.  
-        My expertise lies in **Machine Learning, Deep Learning, NLP, and Computer Vision**, and I love solving real-world challenges with AI.  
+        I am a passionate AI researcher working on Osteoarthritis (OA) Detection using Vision Transformers (ViTs).  
+        My background includes a Bachelor's in Instrumentation Engineering, specializing in Sensors & IoT, and a Diploma in Mechanical Engineering.  
+        My expertise lies in Machine Learning, Deep Learning, NLP, and Computer Vision, and I love solving real-world challenges with AI.  
     </p>
 </section>
 
