--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 <section id="research-proposal" class="section-black">
     <h2>Research Proposal</h2>
     <p>
-        I am currently working on an innovative project at the University of Adelaide, focusing on Osteoarthritis (OA) Detection using Computer Vision. The project explores the use of Vision Transformers (ViTs) to analyze joint MRI scans for early-stage detection and classification of OA.
+        I am worked on an innovative project at the University of Adelaide, focusing on Osteoarthritis (OA) Detection using Computer Vision. The project explores the use of Vision Transformers (ViTs) to analyze joint MRI scans for early-stage detection and classification of OA.
 
 As an AI researcher, I am passionate about leveraging Machine Learning and Deep Learning to tackle real-world problems, and this project is a perfect example of how AI can transform the healthcare industry. By improving diagnostic capabilities, we’re aiming to make a significant impact on early detection and treatment.
     </p>
-    <a href="https://github.com/HarshRathiii/Portfolio/blob/main/literature%20review%201.pdf" class="btn" target="_blank">View Research Proposal</a>
+    <a href="FINAL OA REPORT.pdf" class="btn" target="_blank">View Research Paper</a>
 </section>
 
 <!-- Projects Section -->
