--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Harsh Sanjay Rathi</h1>
             <p>AI Researcher | Machine Learning | Deep Learning | Computer Vision</p>
             <p>📌 <strong>Researcher at University of Adelaide</strong> - Working on **OA Detection using Computer Vision**</p>
-            <a href=(RESUME).pdf" class="btn" target="_blank">View Resume</a>
+            <a href="(RESUME).pdf" class="btn" target="_blank">View Resume</a>
         </div>
     </header>
 
@@ -55,14 +55,15 @@
     </p>
 </section>
 
-<!-- Research Proposal Section -->
+<!-- Research Pa Section -->
 <section id="research-proposal" class="section-black">
     <h2>Research Proposal</h2>
-    <p>
-        I am worked on an innovative project at the University of Adelaide, focusing on Osteoarthritis (OA) Detection using Computer Vision. The project explores the use of Vision Transformers (ViTs) to analyze joint MRI scans for early-stage detection and classification of OA.
+    <p>I worked on an innovative research project at the University of Adelaide, focusing on Osteoarthritis (OA) detection using Computer Vision techniques. The project explored the use of Vision Transformers (ViTs), specifically a Google-based ViT model pretrained on 1000-class ImageNet classification, to analyze joint MRI scans for early-stage detection and classification of OA.</p>
 
-As an AI researcher, I am passionate about leveraging Machine Learning and Deep Learning to tackle real-world problems, and this project is a perfect example of how AI can transform the healthcare industry. By improving diagnostic capabilities, we’re aiming to make a significant impact on early detection and treatment.
-    </p>
+    <p>As part of this study, I compared the performance of a traditional Convolutional Neural Network (CNN) with the advanced Vision Transformer model. The ViT significantly outperformed the CNN in both feature extraction and classification accuracy, achieving an overall accuracy of 70% in OA stage classification.</p>
+
+    <p>As an AI researcher, I am passionate about leveraging Machine Learning and Deep Learning to solve real-world problems. This project highlights the transformative potential of AI in healthcare, especially in enhancing diagnostic capabilities and enabling earlier, more accurate treatment planning.</p>
+
     <a href="FINAL OA REPORT.pdf" class="btn" target="_blank">View Research Paper</a>
 </section>
 
